WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48811
WebKit2: Repeated cmd-key presses lead to unusable UI state
https://bugs.webkit.org/show_bug.cgi?id=48811
Summary
WebKit2: Repeated cmd-key presses lead to unusable UI state
Enrica Casucci
Reported
2010-11-01 17:47:32 PDT
To reproduce: 1. Visit a page with an empty form field in it, or use the degenerately-simple one attached to this bug 2. Click in the empty form field 3. Command-X -- beeps, as expected 4. Command-X again -- doesn't beep 5. Command-X once or twice more After a few of these, the insertion point stops blinking, and you can no longer type into the page. If you're on a real page (e.g. google.com), mousing over links no longer shows hover feedback on the page (the cursor changes to a link cursor, but the underlines etc. don't appear), and clicking on links updates the URL field but does not load the clicked page.
Attachments
Patch
(2.80 KB, patch)
2010-11-01 17:58 PDT
,
Enrica Casucci
ap
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-11-01 17:58:46 PDT
Created
attachment 72610
[details]
Patch
WebKit Review Bot
Comment 2
2010-11-01 18:01:12 PDT
Attachment 72610
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit2/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:14: Line contains tab character. [whitespace/tab] [5] WebKit2/ChangeLog:17: Line contains tab character. [whitespace/tab] [5] Total errors found: 9 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2010-11-02 10:56:22 PDT
Committed revision 71130.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug